3.0.1
* Post DiFX-2.0.0
* All string parameters of difx_input have parameterized lengths
* Get rid of strcpy and strncpy in favor of more friendly snprintf
* Add optional VEX FILE parameter to .calc file
* Introduce new enum SamplingType 
* Add infrastructure for tcalFrequency

3.0
* Includes the following changes merged (hopefully correctly) from the DiFX-1.5 branch;
  - Merge fixes from trunk
  - Add network table infrastructure
  - Load > 1 pulsar polynomial from a file
  - Move flags to DifxJob so combinig multiple subarrays results in accurate
    application of flags.  NOTE: This breaks the API
  - Infrastructure for writing for file-based correlation
  - When sorting antennas, update the scan table (nAntenna, im and model)
  - Fix and simplify DifxInputGetScanIdByAntennaId
  - Fix for parsing of .flag file. 
  - Start some infrastructure for supporting proper flagging in cases of partially
    overlapping scans
  - Add difxcalculator under utils.  This is an implementation of
    http://cira.ivec.org/dokuwiki/lib/exe/fetch.php/difx/difx_calculator.xls
    as a stand-alone program
* Allows support of multiple phase centres in input/calc/im files
* Allows support of zoom bands
* Replaces blockspersend with subintNS
* Shifts numchannels/oversample/decimation etc from Configuration to Freq
* Allows use of Rule table in input file
* Adds support for LO offsets
* Fix memory leak (need to free baseline array)
* Print all spacecraft entries, not just for the first spacecraft
* Prevent merging of jobs that have incompatible clocks
* Change to polynomial-based clock model (up to 5th order)
* Move all data source information to DifxDatastream where it should be
* Respect and track all filenames rather than assume systematically named files
* rename all recChan variables to recBand for better uniformity
* remove baselineFreq2IF array which was complex and wrong and not needed
* RCFreqId was used with two meanings (that usually gave the same value).