@@ -5,6 +5,8 @@
 * Add optional VEX FILE parameter to .calc file
 * Introduce new enum SamplingType 
 * Add infrastructure for tcalFrequency
+* Add DifxStringArray, which will be used for storing scan names and source names in DifxRule blocks
+* Clean up, a little bit, the low level writing routines
 
 3.0
 * Includes the following changes merged (hopefully correctly) from the DiFX-1.5 branch;
